--- a/WebContent/plugin/fancybox/demo/index.html
+++ b/WebContent/plugin/fancybox/demo/index.html
@@ -5,25 +5,25 @@
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 
 	<!-- Add jQuery library -->
-	<script type="text/javascript" src="../lib/jquery-1.10.1.min.js"></script>
+	<script type="text/javascript" src="../jquery-1.10.1.min.js"></script>
 
 	<!-- Add mousewheel plugin (this is optional) -->
-	<script type="text/javascript" src="../lib/jquery.mousewheel-3.0.6.pack.js"></script>
+	<script type="text/javascript" src="../jquery.mousewheel-3.0.6.pack.js"></script>
 
 	<!-- Add fancyBox main JS and CSS files -->
-	<script type="text/javascript" src="../source/jquery.fancybox.js?v=2.1.5"></script>
-	<link rel="stylesheet" type="text/css" href="../source/jquery.fancybox.css?v=2.1.5" media="screen" />
+	<script type="text/javascript" src="../jquery.fancybox.js?v=2.1.5"></script>
+	<link rel="stylesheet" type="text/css" href="../jquery.fancybox.css?v=2.1.5" media="screen" />
 
 	<!-- Add Button helper (this is optional) -->
-	<link rel="stylesheet" type="text/css" href="../source/helpers/jquery.fancybox-buttons.css?v=1.0.5" />
-	<script type="text/javascript" src="../source/helpers/jquery.fancybox-buttons.js?v=1.0.5"></script>
+	<link rel="stylesheet" type="text/css" href="../helpers/jquery.fancybox-buttons.css?v=1.0.5" />
+	<script type="text/javascript" src="../helpers/jquery.fancybox-buttons.js?v=1.0.5"></script>
 
 	<!-- Add Thumbnail helper (this is optional) -->
-	<link rel="stylesheet" type="text/css" href="../source/helpers/jquery.fancybox-thumbs.css?v=1.0.7" />
-	<script type="text/javascript" src="../source/helpers/jquery.fancybox-thumbs.js?v=1.0.7"></script>
+	<link rel="stylesheet" type="text/css" href="../helpers/jquery.fancybox-thumbs.css?v=1.0.7" />
+	<script type="text/javascript" src="../helpers/jquery.fancybox-thumbs.js?v=1.0.7"></script>
 
 	<!-- Add Media helper (this is optional) -->
-	<script type="text/javascript" src="../source/helpers/jquery.fancybox-media.js?v=1.0.6"></script>
+	<script type="text/javascript" src="../helpers/jquery.fancybox-media.js?v=1.0.6"></script>
 
 	<script type="text/javascript">
 		$(document).ready(function() {
